Improving System Tray to support all OS

--- a/src/sx/ip/bundles/bundle_en.properties
+++ b/src/sx/ip/bundles/bundle_en.properties
@@ -13,9 +13,6 @@
 # This file contains all text for the aplication in english language
 
 # For System Tray Controller class
-key.systray.menu.exit = Exit
+key.systray.menu.exit = Quit
 key.systray.menu.mainwindow = Open main window
-key.systray.error.fatal.title=System Tray Dialog
-key.systray.error.fatal.header=Fatal Error
-key.systray.error.fatal.content=ERROR #: Your System Operation version does not support System Tray and the application will be closed. Please contact the support.
 
