Code Refactoring and fixes

--- a/src/sx/ip/bundles/bundle_en.properties
+++ b/src/sx/ip/bundles/bundle_en.properties
@@ -16,3 +16,19 @@
 key.systray.menu.exit = Quit
 key.systray.menu.mainwindow = Open main window
 
+#For main screen messages
+key.main.alert.info.title = Information
+key.main.alert.info.message = Please, read and agree with the terms and conditions of use before you proceed!
+key.main.alert.warning.title = Warning
+key.main.alert.warning.message.v1 = Please, fill at least the Protocol, Proxy ID and Port fields!
+key.main.alert.warning.message.v2 = Please, fill the ProxyID field!
+key.main.dialog.authentication.title = Proxy Authentication
+key.main.dialog.authentication.message = Enter with the proxy authentication
+key.main.dialog.exception.title = Internal Error
+key.main.dialog.exception.stack.text = The exception stacktrace was:
+
+#For main screen componentes
+key.main.button.activate = Activate Proxy
+key.main.button.deactivate = Deactivate
+key.main.combo.prompt = Proxy protocol
+
