--- a/src/sx/ip/bundles/bundle_en.properties
+++ b/src/sx/ip/bundles/bundle_en.properties
@@ -24,6 +24,10 @@ key.main.alert.warning.message.v1 = Please, fill at least the Protocol, Proxy ID
 key.main.alert.warning.message.v2 = Please, fill the ProxyID field!
 key.main.dialog.authentication.title = Proxy Authentication
 key.main.dialog.authentication.message = Enter with the proxy authentication
+key.main.dialog.auth.username.prompt = Username
+key.main.dialog.auth.password.prompt = Password
+key.main.dialog.auth.username.label = Proxy User:
+key.main.dialog.auth.password.label = Proxy Password:
 key.main.dialog.exception.title = Internal Error
 key.main.dialog.exception.stack.text = The exception stacktrace was:
 
@@ -31,4 +35,5 @@ key.main.dialog.exception.stack.text = The exception stacktrace was:
 key.main.button.activate = Activate Proxy
 key.main.button.deactivate = Deactivate
 key.main.combo.prompt = Proxy protocol
+key.main.button.confirm = Confirm
 
