Improve fields validators and fixes

--- a/src/sx/ip/bundles/bundle_en.properties
+++ b/src/sx/ip/bundles/bundle_en.properties
@@ -20,8 +20,9 @@ key.systray.menu.mainwindow = Open main window
 key.main.alert.info.title = Information
 key.main.alert.info.message = Please, read and agree with the terms and conditions of use before you proceed!
 key.main.alert.warning.title = Warning
-key.main.alert.warning.message.v1 = Please, fill at least the Protocol, Proxy ID and Port fields!
-key.main.alert.warning.message.v2 = Please, fill the ProxyID field!
+key.main.alert.warning.message.v1 = Protocol, Proxy IP and Port fields are required!
+key.main.alert.warning.message.v2 = ProxyID field is required!
+key.main.alert.warning.message.v3 = Port should contain only numbers!
 key.main.dialog.authentication.title = Proxy Authentication
 key.main.dialog.authentication.message = Enter with the proxy authentication
 key.main.dialog.auth.username.prompt = Username
@@ -30,6 +31,8 @@ key.main.dialog.auth.username.label = Proxy User:
 key.main.dialog.auth.password.label = Proxy Password:
 key.main.dialog.exception.title = Internal Error
 key.main.dialog.exception.stack.text = The exception stacktrace was:
+key.main.validator.proxyport = Only numbers are supported
+key.main.validator.proxyid = Proxy IP is required
 
 #For main screen componentes
 key.main.button.activate = Activate Proxy
