--- a/src/sx/ip/bundles/bundle_en.properties
+++ b/src/sx/ip/bundles/bundle_en.properties
@@ -35,6 +35,10 @@ key.main.validator.proxyport = Only numbers are supported
 key.main.validator.proxyid = Proxy IP is required
 key.main.validator.pac = PAC URL is required
 key.main.validator.char = Invalid character: "
+key.main.dialog.yes = Yes
+key.main.dialog.no = No
+key.main.dialog.message = Do you really want to remove all proxy settings and connecting directly to the internet?
+key.main.dialog.title = Remove all settings
 
 #For main screen componentes
 key.main.button.activate = Activate Proxy
