--- a/src/sx/ip/bundles/bundle_en.properties
+++ b/src/sx/ip/bundles/bundle_en.properties
@@ -24,6 +24,8 @@ key.main.alert.warning.message.v1 = Protocol, Proxy IP and Port fields are requi
 key.main.alert.warning.message.v2 = ProxyID field is required!
 key.main.alert.warning.message.v3 = Port should contain only numbers!
 key.main.dialog.authentication.title = Proxy Authentication
+key.main.alert.error.title = Error
+key.main.alert.error.invalid.pac.message = The PAC file is unavailable and might not work, do you want to use it anyway?
 key.main.dialog.authentication.message = Enter with the proxy authentication
 key.main.dialog.auth.username.prompt = Username
 key.main.dialog.auth.password.prompt = Password
