--- a/src/sx/ip/bundles/bundle_en.properties
+++ b/src/sx/ip/bundles/bundle_en.properties
@@ -41,6 +41,8 @@ key.main.dialog.yes = Yes
 key.main.dialog.no = No
 key.main.dialog.message = Do you really want to remove all proxy settings and connecting directly to the internet?
 key.main.dialog.title = Remove all settings
+key.main.restart.message = Restart your browser to reload settings
+key.main.restart.message.mac = Restart your browser to reload settings\nThe new proxy settings were activated to your Wi-Fi interface
 
 #For main screen componentes
 key.main.button.activate = Activate Proxy
