Initial structure of Login with email screen

--- a/src/sx/ip/bundles/bundle_en.properties
+++ b/src/sx/ip/bundles/bundle_en.properties
@@ -37,6 +37,8 @@ key.main.validator.proxyport = Only numbers are supported
 key.main.validator.proxyid = Proxy IP is required
 key.main.validator.pac = PAC URL is required
 key.main.validator.char = Invalid character: "
+key.main.validator.empty = Field can not be empty
+key.main.validator.email = The email must be a valid address.
 key.main.dialog.yes = Yes
 key.main.dialog.no = No
 key.main.dialog.message = Do you really want to remove all proxy settings and connecting directly to the internet?
