--- a/src/sx/ip/bundles/bundle_en.properties
+++ b/src/sx/ip/bundles/bundle_en.properties
@@ -45,6 +45,7 @@ key.main.dialog.message = Do you really want to remove all proxy settings and co
 key.main.dialog.title = Remove all settings
 key.main.restart.message = Restart your browser to reload settings
 key.main.restart.message.mac = Restart your browser to reload settings\nThe new proxy settings were activated to your Wi-Fi interface
+key.main.unauthorized = Please make sure you are logged.
 
 #For main screen componentes
 key.main.button.activate = Activate Proxy
