Reset Password screen implementation

--- a/src/sx/ip/bundles/bundle_en.properties
+++ b/src/sx/ip/bundles/bundle_en.properties
@@ -46,6 +46,9 @@ key.main.dialog.title = Remove all settings
 key.main.restart.message = Restart your browser to reload settings
 key.main.restart.message.mac = Restart your browser to reload settings\nThe new proxy settings were activated to your Wi-Fi interface
 key.main.unauthorized = Please make sure you are logged.
+key.main.send.link = Password Reset link sended!
+key.main.send.link.error = We cannot find a user with that email address.
+key.main.login.error = Your data is invalid! 
 
 #For main screen componentes
 key.main.button.activate = Activate Proxy
