IDC-112 small validators fixes
IDC-112 small fixes - validators

--- a/src/sx/ip/bundles/bundle_en.properties
+++ b/src/sx/ip/bundles/bundle_en.properties
@@ -38,6 +38,7 @@ key.main.validator.proxyid = Proxy IP is required
 key.main.validator.pac = PAC URL is required
 key.main.validator.char = Invalid character: "
 key.main.validator.empty = Field can not be empty
+key.main.validator.eth = Field must be a valid ETH Address.
 key.main.validator.email = The email must be a valid address.
 key.main.dialog.yes = Yes
 key.main.dialog.no = No
