Bug fixes, Async api calls, loading bar, layout fixes
Bug fixes, Async api calls, loading bar, layout fixes

--- a/src/sx/ip/bundles/bundle_en.properties
+++ b/src/sx/ip/bundles/bundle_en.properties
@@ -28,6 +28,7 @@ key.main.alert.error.title = Error
 key.main.alert.error.invalid.pac.message = The PAC file is unavailable and might not work, do you want to use it anyway?
 key.main.dialog.authentication.message = Enter with the proxy authentication
 key.main.dialog.auth.username.prompt = Username
+key.main.dialog.wallet.success = Wallet added Sucessfully!
 key.main.dialog.auth.password.prompt = Password
 key.main.dialog.auth.username.label = Proxy User:
 key.main.dialog.auth.password.label = Proxy Password:
@@ -47,7 +48,7 @@ key.main.dialog.title = Remove all settings
 key.main.restart.message = Restart your browser to reload settings
 key.main.restart.message.mac = Restart your browser to reload settings\nThe new proxy settings were activated to your Wi-Fi interface
 key.main.unauthorized = Please make sure you are logged.
-key.main.send.link = Password Reset link sended!
+key.main.send.link = Password Reset link sent!
 key.main.send.link.error = We cannot find a user with that email address.
 key.main.login.error = Your data is invalid! 
 
