--- a/src/sx/ip/bundles/bundle_en.properties
+++ b/src/sx/ip/bundles/bundle_en.properties
@@ -44,6 +44,7 @@ key.main.dialog.auth.password.label = Proxy Password:
 key.main.dialog.exception.title = Internal Error
 key.main.dialog.exception.stack.text = The exception stacktrace was:
 key.main.validator.proxyport = Only numbers are supported
+key.main.validator.numbers = Only numbers are allowed
 key.main.validator.proxyid = Proxy IP is required
 key.main.validator.pac = PAC URL is required
 key.main.validator.char = Invalid character: "
