IDC-138 token request submit button

--- a/src/sx/ip/bundles/bundle_en.properties
+++ b/src/sx/ip/bundles/bundle_en.properties
@@ -35,6 +35,7 @@ key.main.alert.error.resetpw.message = Could not deliver the password reset e-ma
 key.main.alert.error.unexpected.message = Unexpected error, please report: 
 key.main.alert.error.wallet.message = Error in userAPI: Cannot create user's wallet, 
 key.main.alert.error.invalid.pac.message = The PAC file is unavailable and might not work, do you want to use it anyway?
+key.main.alert.error.request.token.title = Error while requesting tokens
 key.main.dialog.authentication.message = Enter with the proxy authentication
 key.main.dialog.auth.username.prompt = Username
 key.main.dialog.wallet.success = Wallet added Sucessfully!
