--- a/src/sx/ip/bundles/bundle_en.properties
+++ b/src/sx/ip/bundles/bundle_en.properties
@@ -23,6 +23,7 @@ key.main.alert.warning.title = Warning
 key.main.alert.warning.message.v1 = Protocol, Proxy IP and Port fields are required!
 key.main.alert.warning.message.v2 = ProxyID field is required!
 key.main.alert.warning.message.v3 = Port should contain only numbers!
+key.main.alert.tokenrequest.success = Token request successfully done!
 key.main.dialog.authentication.title = Proxy Authentication
 key.main.alert.error.title = Error
 key.main.alert.error.auth.title = Error during user authentication
